parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    OP_IN

Grammar

Rule 0     S' -> q0
Rule 1     q0 -> IDENT q0l
Rule 2     q0 -> OP_IF INIT_EXP q5 q3 q4 q5 q3 FIM_EXP INIT_ESCOPO q13 FIM_ESCOPO q8
Rule 3     q0 -> LACO_FOR INIT_EXP IDENT ATRIB q6 OP_TO q6 FIM_EXP INIT_ESCOPO q13 FIM_ESCOPO FIM_SEN q13
Rule 4     q0 -> COMENT q12 COMENT q13
Rule 5     q0l -> DEC_TIPO q1 ATRIB q2 FIM_SEN q13
Rule 6     q0l -> ATRIB q9 FIM_SEN q13
Rule 7     q13 -> IDENT q13l
Rule 8     q13 -> OP_IF INIT_EXP q5 q3 q4 q5 q3 FIM_EXP INIT_ESCOPO q13 FIM_ESCOPO q13ll
Rule 9     q13 -> LACO_FOR INIT_EXP IDENT ATRIB q6 OP_TO q6 FIM_EXP INIT_ESCOPO q13 FIM_ESCOPO FIM_SEN q13
Rule 10    q13 -> COMENT q12 COMENT q13
Rule 11    q13 -> <empty>
Rule 12    q13l -> DEC_TIPO q1 ATRIB q2 FIM_SEN q13
Rule 13    q13l -> ATRIB q9 FIM_SEN q13
Rule 14    q13ll -> FIM_SEN q13
Rule 15    q13ll -> OP_ELSE INIT_ESCOPO q13 FIM_ESCOPO FIM_SEN q13
Rule 16    q1 -> TIPO_INT
Rule 17    q1 -> TIPO_FL
Rule 18    q1 -> TIPO_STR
Rule 19    q1 -> TIPO_BOOL
Rule 20    q2 -> VAL_STR
Rule 21    q2 -> q6
Rule 22    q2 -> q7
Rule 23    q2 -> VAL_BOOL
Rule 24    q2 -> VAL_NULL
Rule 25    q3 -> q10
Rule 26    q3 -> VAL_BOOL
Rule 27    q3 -> VAL_NULL
Rule 28    q4 -> OP_AND
Rule 29    q4 -> OP_OR
Rule 30    q4 -> OP_IGUAL
Rule 31    q4 -> OP_DIF
Rule 32    q4 -> OP_MAIOR
Rule 33    q4 -> OP_MENOR
Rule 34    q4 -> OP_MAIOR_IG
Rule 35    q4 -> OP_MENOR_IG
Rule 36    q5 -> OP_NOT
Rule 37    q5 -> <empty>
Rule 38    q7 -> VAL_FL_P
Rule 39    q7 -> VAL_FL_N
Rule 40    q6 -> VAL_INT_P
Rule 41    q6 -> VAL_INT_N
Rule 42    q8 -> FIM_SEN q13
Rule 43    q8 -> OP_ELSE INIT_ESCOPO q13 FIM_ESCOPO q13
Rule 44    q9 -> q3
Rule 45    q9 -> q10 q11 q10
Rule 46    q10 -> IDENT
Rule 47    q10 -> q6
Rule 48    q10 -> q7
Rule 49    q11 -> OP_SOMA
Rule 50    q11 -> OP_SUB
Rule 51    q11 -> OP_MULT
Rule 52    q11 -> OP_DIV
Rule 53    q12 -> q1
Rule 54    q12 -> q2
Rule 55    q12 -> q3
Rule 56    q12 -> q4
Rule 57    q12 -> q5
Rule 58    q12 -> q8
Rule 59    q12 -> q11
Rule 60    q12 -> q13
Rule 61    q12 -> IDENT

Terminals, with rules where they appear

ATRIB                : 3 5 6 9 12 13
COMENT               : 4 4 10 10
DEC_TIPO             : 5 12
FIM_ESCOPO           : 2 3 8 9 15 43
FIM_EXP              : 2 3 8 9
FIM_SEN              : 3 5 6 9 12 13 14 15 42
IDENT                : 1 3 7 9 46 61
INIT_ESCOPO          : 2 3 8 9 15 43
INIT_EXP             : 2 3 8 9
LACO_FOR             : 3 9
OP_AND               : 28
OP_DIF               : 31
OP_DIV               : 52
OP_ELSE              : 15 43
OP_IF                : 2 8
OP_IGUAL             : 30
OP_IN                : 
OP_MAIOR             : 32
OP_MAIOR_IG          : 34
OP_MENOR             : 33
OP_MENOR_IG          : 35
OP_MULT              : 51
OP_NOT               : 36
OP_OR                : 29
OP_SOMA              : 49
OP_SUB               : 50
OP_TO                : 3 9
TIPO_BOOL            : 19
TIPO_FL              : 17
TIPO_INT             : 16
TIPO_STR             : 18
VAL_BOOL             : 23 26
VAL_FL_N             : 39
VAL_FL_P             : 38
VAL_INT_N            : 41
VAL_INT_P            : 40
VAL_NULL             : 24 27
VAL_STR              : 20
error                : 

Nonterminals, with rules where they appear

q0                   : 0
q0l                  : 1
q1                   : 5 12 53
q10                  : 25 45 45
q11                  : 45 59
q12                  : 4 10
q13                  : 2 3 3 4 5 6 8 9 9 10 12 13 14 15 15 42 43 43 60
q13l                 : 7
q13ll                : 8
q2                   : 5 12 54
q3                   : 2 2 8 8 44 55
q4                   : 2 8 56
q5                   : 2 2 8 8 57
q6                   : 3 3 9 9 21 47
q7                   : 22 48
q8                   : 2 58
q9                   : 6 13

Parsing method: LALR

state 0

    (0) S' -> . q0
    (1) q0 -> . IDENT q0l
    (2) q0 -> . OP_IF INIT_EXP q5 q3 q4 q5 q3 FIM_EXP INIT_ESCOPO q13 FIM_ESCOPO q8
    (3) q0 -> . LACO_FOR INIT_EXP IDENT ATRIB q6 OP_TO q6 FIM_EXP INIT_ESCOPO q13 FIM_ESCOPO FIM_SEN q13
    (4) q0 -> . COMENT q12 COMENT q13

    IDENT           shift and go to state 2
    OP_IF           shift and go to state 3
    LACO_FOR        shift and go to state 4
    COMENT          shift and go to state 5

    q0                             shift and go to state 1

state 1

    (0) S' -> q0 .



state 2

    (1) q0 -> IDENT . q0l
    (5) q0l -> . DEC_TIPO q1 ATRIB q2 FIM_SEN q13
    (6) q0l -> . ATRIB q9 FIM_SEN q13

    DEC_TIPO        shift and go to state 7
    ATRIB           shift and go to state 8

    q0l                            shift and go to state 6

state 3

    (2) q0 -> OP_IF . INIT_EXP q5 q3 q4 q5 q3 FIM_EXP INIT_ESCOPO q13 FIM_ESCOPO q8

    INIT_EXP        shift and go to state 9


state 4

    (3) q0 -> LACO_FOR . INIT_EXP IDENT ATRIB q6 OP_TO q6 FIM_EXP INIT_ESCOPO q13 FIM_ESCOPO FIM_SEN q13

    INIT_EXP        shift and go to state 10


state 5

    (4) q0 -> COMENT . q12 COMENT q13
    (53) q12 -> . q1
    (54) q12 -> . q2
    (55) q12 -> . q3
    (56) q12 -> . q4
    (57) q12 -> . q5
    (58) q12 -> . q8
    (59) q12 -> . q11
    (60) q12 -> . q13
    (61) q12 -> . IDENT
    (16) q1 -> . TIPO_INT
    (17) q1 -> . TIPO_FL
    (18) q1 -> . TIPO_STR
    (19) q1 -> . TIPO_BOOL
    (20) q2 -> . VAL_STR
    (21) q2 -> . q6
    (22) q2 -> . q7
    (23) q2 -> . VAL_BOOL
    (24) q2 -> . VAL_NULL
    (25) q3 -> . q10
    (26) q3 -> . VAL_BOOL
    (27) q3 -> . VAL_NULL
    (28) q4 -> . OP_AND
    (29) q4 -> . OP_OR
    (30) q4 -> . OP_IGUAL
    (31) q4 -> . OP_DIF
    (32) q4 -> . OP_MAIOR
    (33) q4 -> . OP_MENOR
    (34) q4 -> . OP_MAIOR_IG
    (35) q4 -> . OP_MENOR_IG
    (36) q5 -> . OP_NOT
    (37) q5 -> .
    (42) q8 -> . FIM_SEN q13
    (43) q8 -> . OP_ELSE INIT_ESCOPO q13 FIM_ESCOPO q13
    (49) q11 -> . OP_SOMA
    (50) q11 -> . OP_SUB
    (51) q11 -> . OP_MULT
    (52) q11 -> . OP_DIV
    (7) q13 -> . IDENT q13l
    (8) q13 -> . OP_IF INIT_EXP q5 q3 q4 q5 q3 FIM_EXP INIT_ESCOPO q13 FIM_ESCOPO q13ll
    (9) q13 -> . LACO_FOR INIT_EXP IDENT ATRIB q6 OP_TO q6 FIM_EXP INIT_ESCOPO q13 FIM_ESCOPO FIM_SEN q13
    (10) q13 -> . COMENT q12 COMENT q13
    (11) q13 -> .
    (40) q6 -> . VAL_INT_P
    (41) q6 -> . VAL_INT_N
    (38) q7 -> . VAL_FL_P
    (39) q7 -> . VAL_FL_N
    (46) q10 -> . IDENT
    (47) q10 -> . q6
    (48) q10 -> . q7

  ! shift/reduce conflict for COMENT resolved as shift
  ! shift/reduce conflict for COMENT resolved as shift
    IDENT           shift and go to state 21
    TIPO_INT        shift and go to state 22
    TIPO_FL         shift and go to state 23
    TIPO_STR        shift and go to state 24
    TIPO_BOOL       shift and go to state 25
    VAL_STR         shift and go to state 26
    VAL_BOOL        shift and go to state 29
    VAL_NULL        shift and go to state 30
    OP_AND          shift and go to state 32
    OP_OR           shift and go to state 33
    OP_IGUAL        shift and go to state 34
    OP_DIF          shift and go to state 35
    OP_MAIOR        shift and go to state 36
    OP_MENOR        shift and go to state 37
    OP_MAIOR_IG     shift and go to state 38
    OP_MENOR_IG     shift and go to state 39
    OP_NOT          shift and go to state 40
    FIM_SEN         shift and go to state 41
    OP_ELSE         shift and go to state 42
    OP_SOMA         shift and go to state 43
    OP_SUB          shift and go to state 44
    OP_MULT         shift and go to state 45
    OP_DIV          shift and go to state 46
    OP_IF           shift and go to state 47
    LACO_FOR        shift and go to state 48
    COMENT          shift and go to state 11
    VAL_INT_P       shift and go to state 49
    VAL_INT_N       shift and go to state 50
    VAL_FL_P        shift and go to state 51
    VAL_FL_N        shift and go to state 52

  ! COMENT          [ reduce using rule 37 (q5 -> .) ]
  ! COMENT          [ reduce using rule 11 (q13 -> .) ]

    q12                            shift and go to state 12
    q13                            shift and go to state 13
    q1                             shift and go to state 14
    q2                             shift and go to state 15
    q3                             shift and go to state 16
    q4                             shift and go to state 17
    q5                             shift and go to state 18
    q8                             shift and go to state 19
    q11                            shift and go to state 20
    q6                             shift and go to state 27
    q7                             shift and go to state 28
    q10                            shift and go to state 31

state 6

    (1) q0 -> IDENT q0l .

    $end            reduce using rule 1 (q0 -> IDENT q0l .)


state 7

    (5) q0l -> DEC_TIPO . q1 ATRIB q2 FIM_SEN q13
    (16) q1 -> . TIPO_INT
    (17) q1 -> . TIPO_FL
    (18) q1 -> . TIPO_STR
    (19) q1 -> . TIPO_BOOL

    TIPO_INT        shift and go to state 22
    TIPO_FL         shift and go to state 23
    TIPO_STR        shift and go to state 24
    TIPO_BOOL       shift and go to state 25

    q1                             shift and go to state 53

state 8

    (6) q0l -> ATRIB . q9 FIM_SEN q13
    (44) q9 -> . q3
    (45) q9 -> . q10 q11 q10
    (25) q3 -> . q10
    (26) q3 -> . VAL_BOOL
    (27) q3 -> . VAL_NULL
    (46) q10 -> . IDENT
    (47) q10 -> . q6
    (48) q10 -> . q7
    (40) q6 -> . VAL_INT_P
    (41) q6 -> . VAL_INT_N
    (38) q7 -> . VAL_FL_P
    (39) q7 -> . VAL_FL_N

    VAL_BOOL        shift and go to state 57
    VAL_NULL        shift and go to state 58
    IDENT           shift and go to state 59
    VAL_INT_P       shift and go to state 49
    VAL_INT_N       shift and go to state 50
    VAL_FL_P        shift and go to state 51
    VAL_FL_N        shift and go to state 52

    q9                             shift and go to state 54
    q3                             shift and go to state 55
    q10                            shift and go to state 56
    q6                             shift and go to state 60
    q7                             shift and go to state 61

state 9

    (2) q0 -> OP_IF INIT_EXP . q5 q3 q4 q5 q3 FIM_EXP INIT_ESCOPO q13 FIM_ESCOPO q8
    (36) q5 -> . OP_NOT
    (37) q5 -> .

    OP_NOT          shift and go to state 40
    VAL_BOOL        reduce using rule 37 (q5 -> .)
    VAL_NULL        reduce using rule 37 (q5 -> .)
    IDENT           reduce using rule 37 (q5 -> .)
    VAL_INT_P       reduce using rule 37 (q5 -> .)
    VAL_INT_N       reduce using rule 37 (q5 -> .)
    VAL_FL_P        reduce using rule 37 (q5 -> .)
    VAL_FL_N        reduce using rule 37 (q5 -> .)

    q5                             shift and go to state 62

state 10

    (3) q0 -> LACO_FOR INIT_EXP . IDENT ATRIB q6 OP_TO q6 FIM_EXP INIT_ESCOPO q13 FIM_ESCOPO FIM_SEN q13

    IDENT           shift and go to state 63


state 11

    (10) q13 -> COMENT . q12 COMENT q13
    (53) q12 -> . q1
    (54) q12 -> . q2
    (55) q12 -> . q3
    (56) q12 -> . q4
    (57) q12 -> . q5
    (58) q12 -> . q8
    (59) q12 -> . q11
    (60) q12 -> . q13
    (61) q12 -> . IDENT
    (16) q1 -> . TIPO_INT
    (17) q1 -> . TIPO_FL
    (18) q1 -> . TIPO_STR
    (19) q1 -> . TIPO_BOOL
    (20) q2 -> . VAL_STR
    (21) q2 -> . q6
    (22) q2 -> . q7
    (23) q2 -> . VAL_BOOL
    (24) q2 -> . VAL_NULL
    (25) q3 -> . q10
    (26) q3 -> . VAL_BOOL
    (27) q3 -> . VAL_NULL
    (28) q4 -> . OP_AND
    (29) q4 -> . OP_OR
    (30) q4 -> . OP_IGUAL
    (31) q4 -> . OP_DIF
    (32) q4 -> . OP_MAIOR
    (33) q4 -> . OP_MENOR
    (34) q4 -> . OP_MAIOR_IG
    (35) q4 -> . OP_MENOR_IG
    (36) q5 -> . OP_NOT
    (37) q5 -> .
    (42) q8 -> . FIM_SEN q13
    (43) q8 -> . OP_ELSE INIT_ESCOPO q13 FIM_ESCOPO q13
    (49) q11 -> . OP_SOMA
    (50) q11 -> . OP_SUB
    (51) q11 -> . OP_MULT
    (52) q11 -> . OP_DIV
    (7) q13 -> . IDENT q13l
    (8) q13 -> . OP_IF INIT_EXP q5 q3 q4 q5 q3 FIM_EXP INIT_ESCOPO q13 FIM_ESCOPO q13ll
    (9) q13 -> . LACO_FOR INIT_EXP IDENT ATRIB q6 OP_TO q6 FIM_EXP INIT_ESCOPO q13 FIM_ESCOPO FIM_SEN q13
    (10) q13 -> . COMENT q12 COMENT q13
    (11) q13 -> .
    (40) q6 -> . VAL_INT_P
    (41) q6 -> . VAL_INT_N
    (38) q7 -> . VAL_FL_P
    (39) q7 -> . VAL_FL_N
    (46) q10 -> . IDENT
    (47) q10 -> . q6
    (48) q10 -> . q7

  ! shift/reduce conflict for COMENT resolved as shift
  ! shift/reduce conflict for COMENT resolved as shift
    IDENT           shift and go to state 21
    TIPO_INT        shift and go to state 22
    TIPO_FL         shift and go to state 23
    TIPO_STR        shift and go to state 24
    TIPO_BOOL       shift and go to state 25
    VAL_STR         shift and go to state 26
    VAL_BOOL        shift and go to state 29
    VAL_NULL        shift and go to state 30
    OP_AND          shift and go to state 32
    OP_OR           shift and go to state 33
    OP_IGUAL        shift and go to state 34
    OP_DIF          shift and go to state 35
    OP_MAIOR        shift and go to state 36
    OP_MENOR        shift and go to state 37
    OP_MAIOR_IG     shift and go to state 38
    OP_MENOR_IG     shift and go to state 39
    OP_NOT          shift and go to state 40
    FIM_SEN         shift and go to state 41
    OP_ELSE         shift and go to state 42
    OP_SOMA         shift and go to state 43
    OP_SUB          shift and go to state 44
    OP_MULT         shift and go to state 45
    OP_DIV          shift and go to state 46
    OP_IF           shift and go to state 47
    LACO_FOR        shift and go to state 48
    COMENT          shift and go to state 11
    VAL_INT_P       shift and go to state 49
    VAL_INT_N       shift and go to state 50
    VAL_FL_P        shift and go to state 51
    VAL_FL_N        shift and go to state 52

  ! COMENT          [ reduce using rule 37 (q5 -> .) ]
  ! COMENT          [ reduce using rule 11 (q13 -> .) ]

    q12                            shift and go to state 64
    q13                            shift and go to state 13
    q1                             shift and go to state 14
    q2                             shift and go to state 15
    q3                             shift and go to state 16
    q4                             shift and go to state 17
    q5                             shift and go to state 18
    q8                             shift and go to state 19
    q11                            shift and go to state 20
    q6                             shift and go to state 27
    q7                             shift and go to state 28
    q10                            shift and go to state 31

state 12

    (4) q0 -> COMENT q12 . COMENT q13

    COMENT          shift and go to state 65


state 13

    (60) q12 -> q13 .

    COMENT          reduce using rule 60 (q12 -> q13 .)


state 14

    (53) q12 -> q1 .

    COMENT          reduce using rule 53 (q12 -> q1 .)


state 15

    (54) q12 -> q2 .

    COMENT          reduce using rule 54 (q12 -> q2 .)


state 16

    (55) q12 -> q3 .

    COMENT          reduce using rule 55 (q12 -> q3 .)


state 17

    (56) q12 -> q4 .

    COMENT          reduce using rule 56 (q12 -> q4 .)


state 18

    (57) q12 -> q5 .

    COMENT          reduce using rule 57 (q12 -> q5 .)


state 19

    (58) q12 -> q8 .

    COMENT          reduce using rule 58 (q12 -> q8 .)


state 20

    (59) q12 -> q11 .

    COMENT          reduce using rule 59 (q12 -> q11 .)


state 21

    (61) q12 -> IDENT .
    (7) q13 -> IDENT . q13l
    (46) q10 -> IDENT .
    (12) q13l -> . DEC_TIPO q1 ATRIB q2 FIM_SEN q13
    (13) q13l -> . ATRIB q9 FIM_SEN q13

  ! reduce/reduce conflict for COMENT resolved using rule 46 (q10 -> IDENT .)
    COMENT          reduce using rule 46 (q10 -> IDENT .)
    DEC_TIPO        shift and go to state 67
    ATRIB           shift and go to state 68

  ! COMENT          [ reduce using rule 61 (q12 -> IDENT .) ]

    q13l                           shift and go to state 66

state 22

    (16) q1 -> TIPO_INT .

    COMENT          reduce using rule 16 (q1 -> TIPO_INT .)
    ATRIB           reduce using rule 16 (q1 -> TIPO_INT .)


state 23

    (17) q1 -> TIPO_FL .

    COMENT          reduce using rule 17 (q1 -> TIPO_FL .)
    ATRIB           reduce using rule 17 (q1 -> TIPO_FL .)


state 24

    (18) q1 -> TIPO_STR .

    COMENT          reduce using rule 18 (q1 -> TIPO_STR .)
    ATRIB           reduce using rule 18 (q1 -> TIPO_STR .)


state 25

    (19) q1 -> TIPO_BOOL .

    COMENT          reduce using rule 19 (q1 -> TIPO_BOOL .)
    ATRIB           reduce using rule 19 (q1 -> TIPO_BOOL .)


state 26

    (20) q2 -> VAL_STR .

    COMENT          reduce using rule 20 (q2 -> VAL_STR .)
    FIM_SEN         reduce using rule 20 (q2 -> VAL_STR .)


state 27

    (21) q2 -> q6 .
    (47) q10 -> q6 .

  ! reduce/reduce conflict for COMENT resolved using rule 21 (q2 -> q6 .)
    COMENT          reduce using rule 21 (q2 -> q6 .)

  ! COMENT          [ reduce using rule 47 (q10 -> q6 .) ]


state 28

    (22) q2 -> q7 .
    (48) q10 -> q7 .

  ! reduce/reduce conflict for COMENT resolved using rule 22 (q2 -> q7 .)
    COMENT          reduce using rule 22 (q2 -> q7 .)

  ! COMENT          [ reduce using rule 48 (q10 -> q7 .) ]


state 29

    (23) q2 -> VAL_BOOL .
    (26) q3 -> VAL_BOOL .

  ! reduce/reduce conflict for COMENT resolved using rule 23 (q2 -> VAL_BOOL .)
    COMENT          reduce using rule 23 (q2 -> VAL_BOOL .)

  ! COMENT          [ reduce using rule 26 (q3 -> VAL_BOOL .) ]


state 30

    (24) q2 -> VAL_NULL .
    (27) q3 -> VAL_NULL .

  ! reduce/reduce conflict for COMENT resolved using rule 24 (q2 -> VAL_NULL .)
    COMENT          reduce using rule 24 (q2 -> VAL_NULL .)

  ! COMENT          [ reduce using rule 27 (q3 -> VAL_NULL .) ]


state 31

    (25) q3 -> q10 .

    COMENT          reduce using rule 25 (q3 -> q10 .)
    OP_AND          reduce using rule 25 (q3 -> q10 .)
    OP_OR           reduce using rule 25 (q3 -> q10 .)
    OP_IGUAL        reduce using rule 25 (q3 -> q10 .)
    OP_DIF          reduce using rule 25 (q3 -> q10 .)
    OP_MAIOR        reduce using rule 25 (q3 -> q10 .)
    OP_MENOR        reduce using rule 25 (q3 -> q10 .)
    OP_MAIOR_IG     reduce using rule 25 (q3 -> q10 .)
    OP_MENOR_IG     reduce using rule 25 (q3 -> q10 .)
    FIM_EXP         reduce using rule 25 (q3 -> q10 .)


state 32
